k8s/ingress.yaml
#Estrutura
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-api-ingress

#Definimos as regras
spec:
  ingressClassName: nginx
  rules:
  - host: api.mlops.local #Acesso por aqui, cliente.
    http:
      paths:
      - path: / #Caminho da requisição da NOSSA API
        pathType: Prefix #Podemos passa caminhos completos
        backend: #Para onde devo mandar essa requisição?
          service: #Para o service
            #Ligamos ao service
            name: mlops-api-service
            port:
              number: 80 #Mandar para a porta 80 do SERVICE
